--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <!-- page content -->
-    
+    <video autoplay loop muted poster="aurora.jpg" id="bgvid">
+      <source src="aurora.mp4" type="video/mp4">
+    </video>
+
+    <img id="corner-logo" src="qvp-short-logo-processed.png" class="shadowed">
+
+    <img id="center-logo" src="center-logo.svg" class="shadowed">
+
   </body>
 </html>
