--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>title</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <!-- page content -->
@@ -15,6 +16,10 @@
     <img id="corner-logo" src="qvp-short-logo-processed.png" class="shadowed">
 
     <img id="center-logo" src="center-logo.svg" class="shadowed">
+
+    <a id="portfolio" class="nav"> Portfolio </a>
+    <a id="team" class="nav"> Team </a>
+    <a id="contact" class="nav"> Contact </a>
 
   </body>
 </html>
